// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Snapshots All 1`] = `
<label
  className="sc-bdfBwQ hRtIIg Toggle"
  htmlFor="test"
>
  <input
    className="sc-dlfnbm fLMoLY"
    defaultChecked={true}
    disabled={true}
    id="test"
    name="Group"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="sc-gsTCUz heGlGD"
  >
    <span>
      
    </span>
  </div>
</label>
`;

exports[`Toggle Snapshots Children 1`] = `
<label
  className="sc-bdfBwQ hRtIIg"
  htmlFor="test"
>
  <input
    className="sc-dlfnbm fLMoLY"
    defaultChecked={false}
    disabled={false}
    id="test"
    onChange={null}
    type="checkbox"
  />
  <div
    className="sc-gsTCUz heGlGD"
  >
    <span>
      <p>
        hei
      </p>
    </span>
  </div>
</label>
`;

exports[`Toggle Snapshots No props 1`] = `
<label
  className="sc-bdfBwQ hRtIIg"
  htmlFor="test"
>
  <input
    className="sc-dlfnbm fLMoLY"
    defaultChecked={false}
    disabled={false}
    id="test"
    onChange={null}
    type="checkbox"
  />
  <div
    className="sc-gsTCUz heGlGD"
  >
    <span>
      
    </span>
  </div>
</label>
`;

exports[`Toggle Snapshots Toggle 1`] = `
<label
  className="sc-bdfBwQ hRtIIg Toggle"
  htmlFor="test"
>
  <input
    className="sc-dlfnbm fLMoLY"
    defaultChecked={false}
    disabled={false}
    id="test"
    onChange={null}
    type="checkbox"
  />
  <div
    className="sc-gsTCUz heGlGD"
  >
    <span>
      
    </span>
  </div>
</label>
`;

exports[`Toggle Snapshots defaultChecked 1`] = `
<label
  className="sc-bdfBwQ hRtIIg"
  htmlFor="test"
>
  <input
    className="sc-dlfnbm fLMoLY"
    defaultChecked={true}
    disabled={false}
    id="test"
    onChange={null}
    type="checkbox"
  />
  <div
    className="sc-gsTCUz heGlGD"
  >
    <span>
      
    </span>
  </div>
</label>
`;

exports[`Toggle Snapshots disabled 1`] = `
<label
  className="sc-bdfBwQ hRtIIg"
  htmlFor="test"
>
  <input
    className="sc-dlfnbm fLMoLY"
    defaultChecked={false}
    disabled={true}
    id="test"
    onChange={null}
    type="checkbox"
  />
  <div
    className="sc-gsTCUz heGlGD"
  >
    <span>
      
    </span>
  </div>
</label>
`;

exports[`Toggle Snapshots group 1`] = `
<label
  className="sc-bdfBwQ hRtIIg"
  htmlFor="test"
>
  <input
    className="sc-dlfnbm fLMoLY"
    defaultChecked={false}
    disabled={false}
    id="test"
    name="Group"
    onChange={null}
    type="checkbox"
  />
  <div
    className="sc-gsTCUz heGlGD"
  >
    <span>
      
    </span>
  </div>
</label>
`;

exports[`Toggle Snapshots id 1`] = `
<label
  className="sc-bdfBwQ hRtIIg"
  htmlFor="Group"
>
  <input
    className="sc-dlfnbm fLMoLY"
    defaultChecked={false}
    disabled={false}
    id="Group"
    onChange={null}
    type="checkbox"
  />
  <div
    className="sc-gsTCUz heGlGD"
  >
    <span>
      
    </span>
  </div>
</label>
`;

exports[`Toggle Snapshots input 1`] = `
<label
  className="sc-bdfBwQ hRtIIg"
  htmlFor="test"
>
  <input
    className="sc-dlfnbm fLMoLY"
    defaultChecked={false}
    disabled={false}
    id="test"
    onChange={null}
    type="checkbox"
  />
  <div
    className="sc-gsTCUz heGlGD"
  >
    <span>
      
    </span>
  </div>
</label>
`;

exports[`Toggle Snapshots input 2`] = `
<label
  className="sc-bdfBwQ hRtIIg"
  htmlFor="test"
>
  <input
    className="sc-dlfnbm fLMoLY"
    defaultChecked={false}
    disabled={false}
    id="test"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="sc-gsTCUz heGlGD"
  >
    <span>
      
    </span>
  </div>
</label>
`;
